pamc/src/tests/sample_code/should_fail/type_check/labeledness_mismatch/labeled_variant_unlabeled_args.ph
type Nat {
    .O: Nat,
    .S(pred~n: Nat): Nat,
}

let right = Nat.S(pred: Nat.O);
let wrong = Nat.S(Nat.O);
